# CS

./: BlurShader.h  CMakeLists.txt  ComputeShader.h  ComputeShaderPipeline.h  GLBufferObject.cpp  GLBufferObject.h  SSBO.h  computepipeline.cpp  computepipeline.h  csresourcemanager.cpp  csresourcemanager.h  demowidget.cpp  demowidget.h  main.cpp  shaders.qrc
shaders/: addBlockSums.comp  blockScan.comp  compute2.comp  histPrefixSum.comp
